update docs, add pg-compose.yml, add login
