# internal/adapters/controller/api/v1/user.go
@@ -13,6 +13,7 @@ import (
 
 type UserService interface {
 	Create(ctx context.Context, registerReq dto.UserRegister) (*entity.User, error)
+	GetByEmail(ctx context.Context, email string) (*entity.User, error)
 }
 
 type TokenService interface {
@@ -76,7 +77,7 @@ func (h UserHandler) register(c *fiber.Ctx) error {
 	if tokensErr != nil || tokens == nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(dto.HTTPError{
 			Code:    fiber.StatusInternalServerError,
-			Message: tokensErr.Error(),
+			Message: "failed to generate auth tokens",
 		})
 	}
 
@@ -94,7 +95,67 @@ func (h UserHandler) register(c *fiber.Ctx) error {
 	return c.Status(fiber.StatusCreated).JSON(response)
 }
 
+// login godoc
+// @Summary      Login to existing user account.
+// @Description  Login to existing user account using his email, username and password. Returns his ID, email, username, verifiedEmail boolean variable and role
+// @Tags         user
+// @Accept       json
+// @Produce      json
+// @Param        body body  dto.UserLogin true  "User login body object"
+// @Success      200  {object}  dto.UserRegisterResponse
+// @Failure      400  {object}  dto.HTTPError
+// @Failure      404  {object}  dto.HTTPError
+// @Failure      500  {object}  dto.HTTPError
+// @Router       /user/login [post]
+func (h UserHandler) login(c *fiber.Ctx) error {
+	var userDTO dto.UserLogin
+
+	if err := c.BodyParser(&userDTO); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(dto.HTTPError{
+			Code:    fiber.StatusBadRequest,
+			Message: err.Error(),
+		})
+	}
+
+	if errValidate := h.validator.ValidateData(userDTO); errValidate != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(dto.HTTPError{
+			Code:    fiber.StatusBadRequest,
+			Message: errValidate.Error(),
+		})
+	}
+
+	user, errFetch := h.userService.GetByEmail(c.Context(), userDTO.Email)
+	if errFetch != nil {
+		return c.Status(fiber.StatusNotFound).JSON(dto.HTTPError{
+			Code:    fiber.StatusNotFound,
+			Message: "not found",
+		})
+	}
+
+	tokens, tokensErr := h.tokenService.GenerateAuthTokens(c.Context(), user.ID)
+	if tokensErr != nil || tokens == nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(dto.HTTPError{
+			Code:    fiber.StatusInternalServerError,
+			Message: "failed to generate auth tokens",
+		})
+	}
+
+	response := dto.UserRegisterResponse{
+		User: dto.UserReturn{
+			ID:            user.ID,
+			Email:         user.Email,
+			VerifiedEmail: user.VerifiedEmail,
+			Username:      user.Username,
+			Role:          user.Role,
+		},
+		Tokens: *tokens,
+	}
+
+	return c.Status(fiber.StatusOK).JSON(response)
+}
+
 func (h UserHandler) Setup(router fiber.Router) {
 	userGroup := router.Group("/user")
 	userGroup.Post("/register", h.register)
+	userGroup.Post("/login", h.login)
 }
